--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Code)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Code main.cpp)
+add_executable(Code main.cpp algorithms/divide-and-conquer/max-subarray.cpp algorithms/divide-and-conquer/max-subarray.h)
